--- a/style.css
+++ b/style.css
@@ -8,6 +8,41 @@ body{
 }
 
 .left-header{
-    width: 30%;
-    background-color: #080618;
+    font-family: Montserrat, sans-serif;
+    padding:  0 0 0 50px;
+    color: #fff;
+    font-weight: bold;
+    width: 25%;
+    background-color: #0C0A20;
+}
+
+.left-header p{
+    font-size: 18px;
+    font-weight: bold;
+    color: #565596;
+    font-size: 30px;
+}
+
+.pages{
+    margin:  0 0 20px 0;
+}
+
+.left-header ul{
+    font-size: 18px;
+    list-style: none;
+}
+
+.left-header ul li{
+    padding: 0 0 25px 0;
+}
+
+.left-header ul li a{
+    color: #fff;
+    text-decoration: none;
+}
+
+
+
+.social img {
+    width: 20px;
 }
