--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     padding:  0 0 0 50px;
     color: #fff;
     font-weight: bold;
-    width: 20%;
+    width: 24%;
     background-color: #080618;
 }
 
@@ -88,10 +88,36 @@ body{
 
 .right-header{
     width: 100%;
-    background-image: url("photographer.jpg");
+    background-image: url("./images/hero.jpg");
   background-color: #cccccc;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  opacity: .9;
 
+}
+
+.right-section{
+    padding: 40px 0 0 70px;
+}
+
+.right-section h1{
+    /* display: inline; */
+    background-color: rgba(78, 79, 144, .8  );
+    color: rgb(201, 201, 227);
+    padding: 10px;
+    width: 70%;
+    /* margin-right: 150px; */
+    letter-spacing: 2px;
+    font-size: 60px;
+    margin-bottom: 100px;
+}
+
+
+.right-section button{
+    border: none;
+    letter-spacing: 2px;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 12px 20px;
 }
