--- a/style.css
+++ b/style.css
@@ -93,7 +93,8 @@ body{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  opacity: .9;
+  filter: brightness(50%);
+  /* opacity: .9; */
 
 }
 
@@ -120,4 +121,11 @@ body{
     font-size: 20px;
     font-weight: bold;
     padding: 12px 20px;
+}
+
+.aboutus{
+    display: flex;
+    
+    padding: 60px 60px 60px 0px;
+    background-color: #080618;
 }
