--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body{
 }
 
 .left-header{
-    /* font-family: Montserrat, sans-serif; */
     padding:  0 0 0 50px;
     color: #fff;
     font-weight: bold;
@@ -21,7 +20,6 @@ body{
     letter-spacing: 8px;
     padding: 0 0 40px 25px;
     font-weight: bold;
-    /* color: #565596; */
     font-size: 35px;
     background: -webkit-linear-gradient(#F94141, #4D4E8F);
     -webkit-background-clip: text;
@@ -65,7 +63,7 @@ body{
 
 .social p{
     transform: rotate(-90deg);
-    color: #C9C9E3;
+    color: #9193C6;
     font-size: 20px;
 }
 
@@ -93,8 +91,7 @@ body{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  filter: brightness(50%);
-  /* opacity: .9; */
+  filter: brightness(70%);
 
 }
 
@@ -140,4 +137,17 @@ body{
 .about h1{
     color: rgb(201, 201, 227);
     font-size: 48px;
+}
+
+.artist{
+    display: flex;
+    background-color: #080618;
+    padding: 20px;
+}
+
+.artist-word{
+    transform: rotate(-90deg);
+    color: #9193C6;
+    font-size: 30px;
+    font-weight: bold;
 }
