--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ body{
 }
 
 .artist{
+    /* height: 500px; */
     display: flex;
     background-color: #080618;
     padding: 20px;
@@ -147,7 +148,31 @@ body{
 
 .artist-word{
     transform: rotate(-90deg);
+    margin: 0 0 270px 40px;
     color: #9193C6;
-    font-size: 30px;
+    font-size: 23px;
     font-weight: bold;
+}
+
+
+.artist-content{
+    margin: 20px;
+    width: 21%;
+    height: 25em;
+   
+}
+
+.artist-container{
+    width: 90%;
+    display: flex;
+}
+.artist-img{
+    width: 100%;
+    height: 100%;
+    background-image: url("./images/hero.jpg");
+    background-color: #cccccc;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  
 }
