--- a/style.css
+++ b/style.css
@@ -86,12 +86,12 @@ body{
 
 .right-header{
     width: 100%;
-    background-image: url("./images/hero.jpg");
+    background-image: url("./images/prof.png");
   background-color: #cccccc;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  filter: brightness(70%);
+  /* filter: brightness(70%); */
 
 }
 
@@ -166,6 +166,28 @@ body{
     width: 90%;
     display: flex;
 }
+.artist-bien{
+    width: 100%;
+    height: 100%;
+    background-image: url("./images/bien.jpg");
+    background-color: #cccccc;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  
+}
+
+.artist-savara{
+    width: 100%;
+    height: 100%;
+    background-image: url("./images/savara.jpg");
+    background-color: #cccccc;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  
+}
+
 .artist-img{
     width: 100%;
     height: 100%;
