Individual artist bio

--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ body{
     letter-spacing: 1px;
     color: #C9C9E3;
     font-weight: 100;
-    padding: 100px;
+    padding: 0 40px;
 }
 
 .about h1{
@@ -143,7 +143,7 @@ body{
     /* height: 500px; */
     display: flex;
     background-color: #080618;
-    padding: 20px;
+    padding: 20px 20px 100px 20px;
 }
 
 .artist-word{
@@ -188,13 +188,50 @@ body{
   
 }
 
-.artist-img{
+.artist-poly{
     width: 100%;
     height: 100%;
-    background-image: url("./images/hero.jpg");
+    background-image: url("./images/poly.jpg");
     background-color: #cccccc;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
   
+}
+
+.artist-chimano{
+    width: 100%;
+    height: 100%;
+    background-image: url("./images/chimano.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  
+}
+
+.bio{
+    line-height: 23px;
+    letter-spacing: 1px;
+    /* color: #C9C9E3; */
+    font-weight: bold;
+    padding: 10px;
+    /* display: none; */
+
+}
+
+.names{
+    /* padding: 20px; */
+}
+
+.art-name{
+    color: #fff;
+    padding: 0 0 20px 70px;
+}
+
+.art-task{
+    color: #C9C9E3;
+    /* padding: 0 20px; */
+}
+.bien{
+
 }
