--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ body{
 }
 
 .music-cover{
-    background-color: #1D193E;
+    background-color: rgb(29, 25, 62);
     /* display: flex; */
 }
 
@@ -264,11 +264,13 @@ body{
     padding: 0 40px;
 }
 
-audio {
-    /* filter: sepia(20%) saturate(70%) grayscale(1) contrast(99%) invert(12%); */
-    width: 90%;
-    height: 80px;
-    background-color: #4D4E8F;
-    border: none;
+audio{
+    width: 100%;
+    background: #736EE5;
+    padding: 10px 0;
+    border: none !important;
 }
 
+audio::-webkit-media-controls-panel, video::-webkit-media-controls-panel {
+    background-color: #736EE5;
+}
