--- a/style.css
+++ b/style.css
@@ -157,7 +157,6 @@ body{
     font-weight: bold;
 }
 
-
 .artist-content{
     margin: 20px;
     width: 21%;
@@ -169,6 +168,7 @@ body{
     width: 90%;
     display: flex;
 }
+
 .artist-bien{
     width: 100%;
     height: 100%;
@@ -287,7 +287,6 @@ body{
 
 .music-cover{
     background-color: rgb(29, 25, 62);
-    /* display: flex; */
 }
 
 .cover{
@@ -322,7 +321,6 @@ audio::-webkit-media-controls-panel{
 }
 
 #myVideo {
-
     padding: 0px;
     margin: 0;
     overflow: hidden;
@@ -331,8 +329,6 @@ audio::-webkit-media-controls-panel{
  .video{
     padding: 100px 100px 60px 0px;
     background-color: #080618;
-    /* z-index: 1; */
-
 }
 
 .single-vid{
@@ -372,3 +368,12 @@ video::-webkit-media-controls {
   }
   
 
+.contacts{
+    background-color: #080618;
+    padding: 30px 250px;
+}
+
+.contact-sec{
+    padding: 20px;
+    background-color: #736EE5;
+}
