--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ body{
 
 .music{
     background-color: #080618;
-    padding: 30px 250px;
+    padding: 20px 250px;
 }
 
 .music h1{
@@ -327,7 +327,7 @@ audio::-webkit-media-controls-panel{
  }
     
  .video{
-    padding: 100px 100px 60px 0px;
+    padding: 50px 100px 60px 0px;
     background-color: #080618;
 }
 
@@ -445,4 +445,12 @@ video::-webkit-media-controls {
 
 .send:hover{
     background:#F94141;
+}
+
+.back{
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+     width: 50px;
+    height: 50px;
 }
